<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.textfield.TextInputLayout
        app:errorEnabled="true"
        android:id="@+id/name_text_field_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:hint="@string/name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:counterEnabled="true"
        app:counterMaxLength="20"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/name_edit_text_id"
            android:maxLength="20"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/date_text_field_id"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:hint="@string/date"
        app:helperText="Format: dd.mm.yyyy*"
        app:endIconMode="custom"
        app:endIconDrawable="@drawable/ic_baseline_event_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name_text_field_id">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/date_text_view_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/time_text_field_id"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/time"
        app:errorEnabled="true"
        app:layout_constraintEnd_toEndOf="@+id/name_text_field_id"
        app:layout_constraintStart_toStartOf="@+id/name_text_field_id"
        app:layout_constraintTop_toBottomOf="@+id/date_text_field_id">

        <AutoCompleteTextView
            android:id="@+id/time_text_view_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none"
            tools:ignore="LabelFor" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/description_text_field_id"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/description"
        app:layout_constraintEnd_toEndOf="@+id/time_text_field_id"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/time_text_field_id"
        app:layout_constraintTop_toBottomOf="@+id/time_text_field_id">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/description_edit_text_id"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:gravity="top" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/cansel_button_id"
        app:icon="@drawable/ic_baseline_cancel_24"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/cancel"
        app:layout_constraintBottom_toBottomOf="@+id/create_button_id"
        app:layout_constraintEnd_toStartOf="@+id/create_button_id"
        app:layout_constraintTop_toTopOf="@+id/create_button_id" />

    <Button
        app:icon="@drawable/ic_baseline_check_circle_24"
        style="@style/Widget.MaterialComponents.Button.Icon"
        android:id="@+id/create_button_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/save"
        app:layout_constraintEnd_toEndOf="@+id/description_text_field_id"
        app:layout_constraintTop_toBottomOf="@+id/description_text_field_id" />

</androidx.constraintlayout.widget.ConstraintLayout>